LDEV-4739 Updating labels for task
Updating English, Spanish, Norwegian and Greek

--- a/lams_tool_task/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_task/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = takslist
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 01:32:14 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 01:06:20 CST 2018 
  
 #=================== labels for Task List =================# 
 
@@ -29,7 +29,6 @@ label.authoring.basic.task.isCommentsAllowed  =Allow Learners to add comment(s)
 label.authoring.basic.task.isCommentsRequired  =Comment required to complete task
 label.authoring.basic.task.isFilesAllowed  =Allow learners to add file(s)
 label.authoring.basic.task.isFilesRequired  =File required to complete task
-label.authoring.basic.task.isCommentsFilesAllowed  =Allow learners to add comments/files for this task
 label.authoring.basic.task.show.only.to.monitoring  =Show only to monitoring
 label.authoring.basic.task.show.to.all.learners  =Show to all learners
 label.authoring.basic.task.isChildTask  =Don't display until parent task has been completed
@@ -110,7 +109,7 @@ label.monitoring.summary.confirm.completion  =Confirm completion
 label.monitoring.summary.title.reflection  =Notebook entry
 label.monitoring.summary.reflection  =Notebook entry
 label.monitoring.tasksummary.task.summary  =Task summary
-label.monitoring.tasksummary.task.required.to.finish  =(This task is required to finish this activity.)
+label.monitoring.tasksummary.task.required.to.finish  =this task is required to finish this activity
 label.monitoring.tasksummary.parent.activity  =Parent task
 label.monitoring.tasksummary.comments.files.enabled  =Comments/files enabled
 label.monitoring.tasksummary.user  =Learner
@@ -121,7 +120,6 @@ label.monitoring.tasksummary.comments.allowed  =Learners are allowed to add comm
 label.monitoring.tasksummary.comments.required  =Comments are required to complete the task
 label.monitoring.tasksummary.files.allowed  =Learners are allowed to add files
 label.monitoring.tasksummary.files.required  =Files are required to complete the task
-message.monitoring.edit.activity.not.editable  =This activity is no longer editable
 label.export.reflection  =Notebook entries
 label.view  =View
 label.edit  =Edit
@@ -170,9 +168,10 @@ label.activity.completion  =End of activity
 errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
 error.attachment.executable  =Uploaded file is executable
 label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
-outcome.authoring.title =Learning outcomes
-outcome.authoring.input =Search and select by outcome name or code
-outcome.authoring.existing =Added outcomes
-outcome.authoring.existing.none =none
+outcome.authoring.title  =Learning outcomes
+outcome.authoring.input  =Search and select by outcome name or code
+outcome.authoring.existing  =Added outcomes
+outcome.authoring.existing.none  =none
 
-#======= End labels: Exported 164 labels for en AU =====
+
+#======= End labels: Exported 166 labels for en AU =====
