--- a/lams_tool_task/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_task/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = takslist
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:49:27 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 01:06:21 CST 2018 
  
 #=================== labels for Task List =================# 
 
@@ -29,7 +29,6 @@ label.authoring.basic.task.isCommentsAllowed  =\u00bfPueden los estudiantes a\u0
 label.authoring.basic.task.isCommentsRequired  =Se require que el estudiante agrege comentarios para finalizar esta tarea
 label.authoring.basic.task.isFilesAllowed  =\u00bfPueden los estudiantes a\u00f1adir archivos?
 label.authoring.basic.task.isFilesRequired  =Se require que el estudiante agrege archivos para finalizar esta tarea
-label.authoring.basic.task.isCommentsFilesAllowed  =\u00bfPueden los estudiantes a\u00f1adir archivos y comentarios?
 label.authoring.basic.task.show.only.to.monitoring  =Mostrar solo al tutor
 label.authoring.basic.task.show.to.all.learners  =Mostrar a los estudiantes
 label.authoring.basic.task.isChildTask  =No muestre esta tarea almenos que se haya realizado la tarea superior
@@ -169,6 +168,10 @@ label.activity.completion  =Al finalizar actividad
 errors.maxfilesize  =El archivo enviado excede el m\u00e1ximo tama\u00f1o permitido de {0} bytes.
 error.attachment.executable  =El archivo cargado es ejecutable
 label.upload.info  =El archivo cargado no debe ser ejecutable y no debe exceder el tama\u00f1o de {0}
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 163 labels for es ES =====
+#======= End labels: Exported 166 labels for es ES =====
