LDEV-4739 Updating labels for daco
Updating English, Spanish, Greek and Norwegian

--- a/lams_tool_daco/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_daco/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = daco
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:49:48 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 01:08:59 CST 2018 
  
 #=================== labels for Data Collection =================# 
 
@@ -136,7 +136,7 @@ label.learning.summary.emptyanswer  =Empty answer
 label.learning.continue  =Continue
 label.learning.finished  =Next Activity
 message.learning.alertContentEdit  =The modification of the content is not allowed since one or more participants has attempted the activity.
-message.learning.warnLockOnFinish  =Note: After you click on "Next Activity" and you come back to this Data Collection, you won't be able to view questions
+message.learning.warnLockOnFinish  =Note: after you complete this activity, you won't be able to continue adding new records.
 message.learning.addrecordsuccess  =The record was added successfully.
 message.learning.editrecordsuccess  =The record was updated successfully.
 message.learning.activityLocked  =The instructor has set this activity not to allow you to add any more answers after you have finished it.
@@ -255,6 +255,10 @@ errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
 error.attachment.executable  =Uploaded file is executable
 error.attachment.must.be.image  =Allowed file formats: JPG, GIF or PNG.
 label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
+outcome.authoring.title  =Learning outcomes
+outcome.authoring.input  =Search and select by outcome name or code
+outcome.authoring.existing  =Added outcomes
+outcome.authoring.existing.none  =none
 
 
-#======= End labels: Exported 249 labels for en AU =====
+#======= End labels: Exported 253 labels for en AU =====
