--- a/lams_tool_daco/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_daco/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = daco
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:49:47 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 01:09:00 CST 2018 
  
 #=================== labels for Data Collection =================# 
 
@@ -255,6 +255,10 @@ errors.maxfilesize  =El archivo subido excedi\u00f3 el tama\u00f1o m\u00e1ximo: 
 error.attachment.executable  =El archivo cargado es ejecutable
 error.attachment.must.be.image  =Formatos de archivo permitidos: JPG, GIF o PNG.
 label.upload.info  =El archivo cargado no debe ser ejecutable y no debe exceder el tama\u00f1o de {0}
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 249 labels for es ES =====
+#======= End labels: Exported 253 labels for es ES =====
