LDEV-4739 Updating labels for Spreadsheet
Updating English, Greek, Spanish and Norwegian

--- a/lams_tool_spreadsheet/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_spreadsheet/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = spreadsheet
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:50:10 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 01:13:19 CST 2018 
  
 #=================== labels for Online Spreadsheet =================# 
 
@@ -115,6 +115,10 @@ label.search  =Buscar...
 label.refresh  =Actualizar
 label.spreadsheet.options  =Opciones
 label.activity.completion  =Al finalizar actividad
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 109 labels for es ES =====
+#======= End labels: Exported 113 labels for es ES =====
