--- a/lams_tool_wiki/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_wiki/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = wiki
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:42:05 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 01:17:16 CST 2018 
  
 #=================== labels for Wiki =================# 
 
@@ -150,6 +150,10 @@ authoring.info.teacher.set.restriction  =For this activity, the instructor fixed
 monitor.summary.notification  =Notification
 monitor.summary.date.restriction.set  =Deadline has been set
 monitor.summary.date.restriction.removed  =Deadline has been removed
+outcome.authoring.title  =Learning outcomes
+outcome.authoring.input  =Search and select by outcome name or code
+outcome.authoring.existing  =Added outcomes
+outcome.authoring.existing.none  =none
 
 
-#======= End labels: Exported 144 labels for en AU =====
+#======= End labels: Exported 148 labels for en AU =====
