--- a/lams_tool_wiki/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_wiki/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = wiki
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:20:11 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 01:17:18 CST 2018 
  
 #=================== labels for Wiki =================# 
 
@@ -150,6 +150,10 @@ authoring.info.teacher.set.restriction  =Para esta actividad, el instructor fij\
 monitor.summary.notification  =Notificaci\u00f3n
 monitor.summary.date.restriction.set  =Fecha
 monitor.summary.date.restriction.removed  =La fecha l\u00edmite ha sido eliminada
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 144 labels for es ES =====
+#======= End labels: Exported 148 labels for es ES =====
