LDEV-4730 Updating labels for Pixlr
Updating English, Greek, Spanish and Norwegian

--- a/lams_tool_pixlr/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_pixlr/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = pixlr
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 01:23:04 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 01:24:43 CST 2018 
  
 #=================== labels for Pixlr Tool =================# 
 
@@ -106,6 +106,10 @@ label.image.options  =Image options
 label.activity.completion  =End of activity
 errors.maxfilesize  =Uploaded file exceeded maximum size of {0}
 label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
+outcome.authoring.title  =Learning outcomes
+outcome.authoring.input  =Search and select by outcome name or code
+outcome.authoring.existing  =Added outcomes
+outcome.authoring.existing.none  =none
 
 
-#======= End labels: Exported 100 labels for en AU =====
+#======= End labels: Exported 104 labels for en AU =====
