--- a/lams_tool_pixlr/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_pixlr/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = pixlr
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:55:51 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 01:24:42 CST 2018 
  
 #=================== labels for Pixlr Tool =================# 
 
@@ -106,6 +106,10 @@ label.image.options  =Opciones
 label.activity.completion  =Al finalizar actividad
 errors.maxfilesize  =El archivo subido excedi\u00f3 el tama\u00f1o m\u00e1ximo de {0}
 label.upload.info  =El archivo cargado no debe ser ejecutable y no debe exceder el tama\u00f1o de {0}
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 100 labels for es ES =====
+#======= End labels: Exported 104 labels for es ES =====
