--- a/lams_tool_images/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = images
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:50:32 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 01:26:47 CST 2018 
  
 #=================== labels for Image Gallery =================# 
 
@@ -152,6 +152,10 @@ label.your.rating  =Su calificaci\u00f3n {0}, calificaci\u00f3n promedio {1}/{2}
 label.comment.textarea.tip  =Escriba su comentario aqu\u00ed y luego haga clic en el tic verde
 warning.minimum.number.words  =Hay un n\u00famero m\u00ednimo requerido de palabras en un comentario {0}
 label.upload.info  =El archivo cargado no debe exceder el tama\u00f1o de {0}
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 146 labels for es ES =====
+#======= End labels: Exported 150 labels for es ES =====
