LDEV-4730 Updating labels for Gradebook
Updating English, Spanish, Norwegian and Greek.

--- a/lams_gradebook/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:50:51 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 01:39:57 CST 2018 
  
 #=================== labels for Gradebook =================# 
 
@@ -118,6 +118,16 @@ label.hide.lessons.to.export  =Hide lessons to export
 label.activity.marks.weighted  =(Activity Marks Weighted)
 gradebook.export.max.time.taken.seconds  =Maximum time taken (seconds)
 gradebook.export.min.time.taken.seconds  =Minimum time taken (seconds)
+outcome.authoring.title  =Learning outcomes
+outcome.authoring.input  =Search and select by outcome name or code
+outcome.authoring.existing  =Added outcomes
+outcome.authoring.existing.none  =none
+outcome.result.not.set  =not set
+outcome.result.error  =Error!
+gradebook.columntitle.attempt  =Attempt #
+gradebook.columntitle.outcome  =Learning outcomes
+gradebook.columntitle.lesson.mark  =Lesson mark
+gradebook.columntitle.attempts  =Previous attempts
 
 
-#======= End labels: Exported 112 labels for en AU =====
+#======= End labels: Exported 122 labels for en AU =====
