--- a/lams_gradebook/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:50:50 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 01:39:56 CST 2018 
  
 #=================== labels for Gradebook =================# 
 
@@ -118,6 +118,16 @@ label.hide.lessons.to.export  =Ocultar lecciones para exportar
 label.activity.marks.weighted  =(Puntajes de actividad ponderadas)
 gradebook.export.max.time.taken.seconds  =Tiempo m\u00e1ximo (en segundos)
 gradebook.export.min.time.taken.seconds  =Tiempo m\u00ednimo (en segundos)
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
+outcome.result.not.set  =No especificado
+outcome.result.error  =Error!
+gradebook.columntitle.attempt  =Intento #
+gradebook.columntitle.outcome  =Objetivos de aprendizaje
+gradebook.columntitle.lesson.mark  =Puntaje lecci\u00f3n
+gradebook.columntitle.attempts  =Intentos previos
 
 
-#======= End labels: Exported 112 labels for es ES =====
+#======= End labels: Exported 122 labels for es ES =====
