--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:51:10 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 09:17:35 CST 2018 
  
 #=================== labels for Assessment =================# 
 
@@ -315,7 +315,7 @@ label.average.mark  =Puntaje promedio
 label.error  =Error
 error.loaderror  =Hubo un error al cargar el contenido. Si el problema persiste contacte al administrador del sistema.
 label.ok  =OK
-message.monitoring.edit.activity.warning  =Advertencia: si edita y modifica una pregunta o cambia una respuesta que un l\u00edder ya ha respondido, el puntaje para todo el grupo por la pregunta modificada se eliminar\u00e1 permanentemente ya que se supone que la pregunta ha cambiado.
+message.monitoring.edit.activity.warning  =Advertencia: si edita y modifica una pregunta o cambia una respuesta que ya ha sido contestada por alg\u00fan alumno, los resultados se recalcular\u00e1n en funci\u00f3n de estos cambios.
 label.enable.confidence.levels  =Incluir nivel de confianza
 label.what.is.your.confidence.level  =\u00bfQu\u00e9 nivel de confianza tiene en la respuesta seleccionada?
 label.confidence  =Confianza
@@ -338,6 +338,11 @@ label.disclose.groups.answers  =Revelar repuestas de grupos
 label.disclose.all.correct.answers  =Revelar todas las respuestas correctas
 label.disclose.all.groups.answers  =Revelar todas las respuestas de los grupos
 label.prefix.sequential.letters.for.each.answer  =A\u00f1adir prefijo de letras secuenciales  para cada respuesta [ej: a), b), c)..]
+label.edit.in.monitor.warning  =Atenci\u00f3n: mientras edita esta evaluaci\u00f3n, los alumnos no tienen acceso a ella. Debe guardar los cambios para que los alumnos puedan volver a intentar esta evaluaci\u00f3n nuevamente.
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 332 labels for es ES =====
+#======= End labels: Exported 337 labels for es ES =====
