--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:51:10 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 09:17:35 CST 2018 
  
 #=================== labels for Assessment =================# 
 
@@ -174,7 +174,7 @@ label.monitoring.question.summary.default.mark  =Default mark
 label.monitoring.question.summary.penalty  =Penalty
 label.monitoring.question.summary.average.mark  =Average mark
 label.monitoring.question.summary.group  =Group:
-label.monitoring.question.summary.ok  =Close
+label.monitoring.question.summary.ok  =Ok
 output.desc.learner.total.score  =Last total score
 output.desc.learner.time.taken  =Time taken
 output.desc.learner.number.of.attempts  =Number of attempts
@@ -315,7 +315,7 @@ label.average.mark  =Average mark
 label.error  =Error
 error.loaderror  =There was an error loading the grid. If this problem persists, please contact your system administrator.
 label.ok  =OK
-message.monitoring.edit.activity.warning  =Warning: if you edit and modify a question or change an answer that a learner has already answered, then the mark attained for the modified question will be deleted as it is assumed that the question has changed. If the option for retries is available, then the learner can submit an answer for this question again.
+message.monitoring.edit.activity.warning  =Warning: if you edit and modify a question or change an answer that when a student has already answer, the marks will be recalculated based on the changes.
 label.enable.confidence.levels  =Enable confidence level
 label.what.is.your.confidence.level  =How confident are you of your answer?
 label.confidence  =Confidence
@@ -339,6 +339,10 @@ label.disclose.all.correct.answers  =Disclose all correct answers
 label.disclose.all.groups.answers  =Disclose all groups' answers
 label.prefix.sequential.letters.for.each.answer  =Prefix sequential letters for each answer
 label.edit.in.monitor.warning  =Attention: while you edit this assessment students don't have access to it. You must save your changes so students can re-attempt this assessment again.
+outcome.authoring.title  =Learning outcomes
+outcome.authoring.input  =Search and select by outcome name or code
+outcome.authoring.existing  =Added outcomes
+outcome.authoring.existing.none  =none
 
 
-#======= End labels: Exported 332 labels for en AU =====
+#======= End labels: Exported 337 labels for en AU =====
