LDEV-4730 Updating labels for Mindmap
Updating Spanish, English and Greek

--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = mindmap
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 13 23:34:56 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 09:20:30 CST 2018 
  
 #=================== labels for Mindmap =================# 
 
@@ -103,6 +103,10 @@ label.edit.idea.text  =Editar el texto
 label.delete.idea  =Borrar idea
 label.expand.collapse.idea  =Expandir/colapsar idea
 label.no.changes.can.be.made.reloading.ideas  =No se pueden hacer cambios a este mapa de ideas. Volviendo a cargar el mapa.
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 97 labels for es ES =====
+#======= End labels: Exported 101 labels for es ES =====
