--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = mindmap
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 13 23:28:06 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 09:20:30 CST 2018 
  
 #=================== labels for Mindmap =================# 
 
@@ -103,6 +103,10 @@ label.edit.idea.text  =Edit Idea Text
 label.delete.idea  =Delete Idea
 label.expand.collapse.idea  =Expand/Collapse Idea
 label.no.changes.can.be.made.reloading.ideas  =No changes can be made to the mindmap. Reloading ideas.
+outcome.authoring.title  =Learning outcomes
+outcome.authoring.input  =Search and select by outcome name or code
+outcome.authoring.existing  =Added outcomes
+outcome.authoring.existing.none  =none
 
 
-#======= End labels: Exported 97 labels for en AU =====
+#======= End labels: Exported 101 labels for en AU =====
