LDEV-4730 Updating labels for IMS Common cartridge
Updating Greek, Spanish, English and Norwegian

--- a/lams_tool_imscc/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_imscc/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = imscc
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:57:54 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 09:23:21 CST 2018 
  
 #=================== labels for IMS Common Cartridge =================# 
 
@@ -53,7 +53,6 @@ error.resource.item.title.blank  =El t\u00edtulo no puede estar en blanco.
 error.resource.item.url.blank  =La URL no puede estar en blanco.
 error.upload.failed  =Subir archivo error: {0}
 label.authoring.advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
-label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez finalizada la actividad.
 label.authoring.advance.mini.number.resources.view  =N\u00famero m\u00ednimo de recursos para ver
 label.authoring.advance.run.content.auto  =Ejecutar el contenido de forma autom\u00e1tica (s\u00f3lo est\u00e1 disponible si hay exactamente un recurso)
 label.authoring.basic.add.file  =A\u00f1adir Common Cartridge
@@ -99,12 +98,10 @@ label.show  =Mostrar
 label.up  =Mover hacia arriba
 label.view  =Ver
 lable.learning.minimum.view.number.less  =Debe ber por lo menos {0} de recursos
-message.activityLocked  =El instructor ha establecido esta actividad no le permite ver o compartir m\u00e1s recursos despu\u00e9s de haber finalizado.
 message.alertContentEdit  =Advertencia: Una de las m\u00e1s estudiantes ha accedido a esta actividad. El cambio de este contenido se traducir\u00e1 en los estudiantes reciben una informaci\u00f3n diferente.
 message.monitoring.summary.no.resource.for.group  =No hay recursos disponible para este grupo.
 message.monitoring.summary.no.session  =Ninguna sesi\u00f3n disponible
 message.no.reflection.available  =No ha reflexiones disponibles
-message.warnLockOnFinish  =Atenci\u00f3n: Despu\u00e9s de hacer clic en Finalizar, al volver a esta actividad no podra participar.
 monitoring.label.access.time  =Tiempo de acceso
 monitoring.label.group  =Grupo
 monitoring.label.hide  =Ocultar
@@ -133,6 +130,10 @@ label.activity.completion  =Al finalizar actividad
 errors.maxfilesize  =El archivo subido excedi\u00f3 el tama\u00f1o m\u00e1ximo: {0}
 error.attachment.executable  =El archivo cargado es ejecutable
 label.upload.info  =El archivo cargado no debe ser ejecutable y no debe exceder el tama\u00f1o de {0}
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 127 labels for es ES =====
+#======= End labels: Exported 128 labels for es ES =====
