LDEV-4730 Updating labels for Leader selection
Updating Greek, English and Spanish

--- a/lams_tool_leader/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = leader
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Dec 05 23:39:22 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 09:29:41 CST 2018 
  
 #=================== labels for Leader selection =================# 
 
@@ -61,7 +61,7 @@ label.no.leader.yet.title  =No se ha seleccionado l\u00edder
 label.no.leader.yet.body  =Una vez que el l\u00edder haya sido seleccionado, podr\u00e1 avanzar a la siguiente actividad.
 output.desc.leader.user.id  =Usuario
 outcome.authoring.title  =Objetivos de aprendizaje
-outcome.authoring.input  =Busque y seleccione por nombre de objetivo
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
 outcome.authoring.existing  =Objetivos a\u00f1adidos
 outcome.authoring.existing.none  =ninguno
 
