--- a/lams_tool_leader/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = leader
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:44:55 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 09:28:00 CST 2018 
  
 #=================== labels for Leader selection =================# 
 
@@ -59,6 +59,11 @@ heading.leader  =\u03a3\u03c5\u03bd\u03c4\u03bf\u03bd\u03b9\u03c3\u03c4\u03ae\u0
 monitoring.label.group  =\u039f\u03bc\u03ac\u03b4\u03b1
 label.no.leader.yet.title  =\u0394\u03b5\u03bd \u03ad\u03c7\u03b5\u03b9 \u03b5\u03c0\u03b9\u03bb\u03b5\u03b3\u03b5\u03af \u03b1\u03ba\u03cc\u03bc\u03b7 \u03bf \u03b7\u03b3\u03ad\u03c4\u03b7\u03c2/\u03c3\u03c5\u03bd\u03c4\u03bf\u03bd\u03b9\u03c3\u03c4\u03ae\u03c2 \u03c4\u03b7\u03c2 \u03bf\u03bc\u03ac\u03b4\u03b1\u03c2
 label.no.leader.yet.body  =\u039c\u03cc\u03bb\u03b9\u03c2 \u03b5\u03c0\u03b9\u03bb\u03b5\u03b3\u03b5\u03af \u03ad\u03bd\u03b1\u03c2 \u03b7\u03b3\u03ad\u03c4\u03b7\u03c2/\u03c3\u03c5\u03bd\u03c4\u03bf\u03bd\u03b9\u03c3\u03c4\u03ae\u03c2 \u03c4\u03b7\u03c2 \u03bf\u03bc\u03ac\u03b4\u03b1\u03c2, \u03b8\u03b1 \u03b5\u03af\u03c3\u03c4\u03b5 \u03c3\u03b5 \u03b8\u03ad\u03c3\u03b7 \u03bd\u03b1 \u03c3\u03c5\u03bd\u03b5\u03c7\u03af\u03c3\u03b5\u03c4\u03b5 \u03bc\u03b5 \u03c4\u03b7\u03bd \u03b5\u03c0\u03cc\u03bc\u03b5\u03bd\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1
+output.desc.leader.user.id  =\u03a4\u03b1\u03c5\u03c4\u03cc\u03c4\u03b7\u03c4\u03b1 \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7
+outcome.authoring.title  =\u039c\u03b1\u03b8\u03b7\u03c3\u03b9\u03b1\u03ba\u03ac \u03b1\u03c0\u03bf\u03c4\u03b5\u03bb\u03ad\u03c3\u03bc\u03b1\u03c4\u03b1
+outcome.authoring.input  =\u0391\u03bd\u03b1\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7 \u03ba\u03b1\u03b9 \u03b5\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae \u03bc\u03ad \u03cc\u03bd\u03bf\u03bc\u03b1 \u03ae \u03ba\u03c9\u03b4\u03b9\u03ba\u03cc
+outcome.authoring.existing  =\u039c\u03b1\u03b8\u03b7\u03c3\u03b9\u03b1\u03ba\u03ac \u0391\u03c0\u03bf\u03c4\u03b5\u03bb\u03ad\u03c3\u03bc\u03b1\u03c4\u03b1 \u03c4\u03b1 \u03bf\u03c0\u03bf\u03af\u03b1 \u03c0\u03c1\u03bf\u03c3\u03c4\u03ad\u03b8\u03b7\u03ba\u03b1\u03bd
+outcome.authoring.existing.none  =\u03ba\u03b1\u03bd\u03ad\u03bd\u03b1\u03c2
 
 
-#======= End labels: Exported 53 labels for el GR =====
+#======= End labels: Exported 58 labels for el GR =====
