LDEV-4730 Updating labels for Scratchie
Updating Greek, English and Spanish

--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = scratchie
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:14:12 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 09:31:02 CST 2018 
  
 #=================== labels for Scratchie =================# 
 
@@ -224,6 +224,8 @@ label.print  =\u0395\u03ba\u03c4\u03cd\u03c0\u03c9\u03c3\u03b7
 label.teams.notuppercase  =\u039f\u03bc\u03ac\u03b4\u03b5\u03c2
 label.authoring.advanced.show.scratchies.in.results  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03b1\u03c0\u03bf\u03c4\u03b5\u03bb\u03b5\u03c3\u03bc\u03ac\u03c4\u03c9\u03bd \u03c3\u03c4\u03bf\u03c5\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5\u03c2 \u03bc\u03b5\u03c4\u03ac \u03c4\u03b7\u03bd \u03bf\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03ae
 label.scroll.down.to.burning.question  =\u039a\u03c5\u03bb\u03ae\u03c3\u03c4\u03b5 \u03b3\u03b9\u03b1 \u03bd\u03b1 \u03bc\u03b5\u03c4\u03b1\u03ba\u03b9\u03bd\u03b7\u03b8\u03b5\u03af\u03c4\u03b5 \u03c0\u03c1\u03bf\u03c2 \u03c4\u03b1 \u03ba\u03ac\u03c4\u03c9 \u03c3\u03c4\u03b7\u03bd \u03b1\u03bd\u03c4\u03af\u03c3\u03c4\u03bf\u03b9\u03c7\u03b7 \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7
+label.expand.all  =\u0391\u03bd\u03ac\u03c0\u03c4\u03c5\u03be\u03b7 \u03cc\u03bb\u03c9\u03bd
+label.collapse.all  =\u03a3\u03cd\u03bc\u03c0\u03c4\u03c5\u03be\u03b7 \u03cc\u03bb\u03c9\u03bd
 
 
-#======= End labels: Exported 218 labels for el GR =====
+#======= End labels: Exported 220 labels for el GR =====
