--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = scratchie
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Aug 13 00:18:56 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 09:32:23 CST 2018 
  
 #=================== labels for Scratchie =================# 
 
@@ -226,6 +226,10 @@ label.authoring.advanced.show.scratchies.in.results  =Mostrar puntajes y resulta
 label.scroll.down.to.burning.question  =Despl\u00e1cese hacia abajo a la pregunta de grabaci\u00f3n correspondiente
 label.expand.all  =Expandir
 label.collapse.all  =Contraer
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 220 labels for es ES =====
+#======= End labels: Exported 224 labels for es ES =====
