--- a/lams_tool_preview/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = peer_review
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 01:02:36 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 09:35:14 CST 2018 
  
 #=================== labels for Peer Review =================# 
 
@@ -188,6 +188,10 @@ label.email.preview  =Previa de mensaje
 button.preview.results  =Ver / Enviar resultados
 label.hide  =Esconder
 label.email.send.failed.preview.wrong  =Error de env\u00edo: no se puede enviar mensaje. Por favor crea una nueva vista previa.
+outcome.authoring.title  =Objetivos de aprendizaje
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
+outcome.authoring.existing  =Objetivos a\u00f1adidos
+outcome.authoring.existing.none  =ninguno
 
 
-#======= End labels: Exported 182 labels for es ES =====
+#======= End labels: Exported 186 labels for es ES =====
