--- a/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Dec 27 22:32:52 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 09:37:21 CST 2018 
  
 #=================== labels for Forum =================# 
 
@@ -247,7 +247,7 @@ label.anonymous  =Anonimo
 label.anonymous.tooltip  =Seleccione "Publicar an\u00f3nimamente" si quiere esconder su nombre a otros estudiantes. El instructor a\u00fan podr\u00e1 ver su nombre.
 label.marks.released  =Las evaluaciones han sido publicadas
 outcome.authoring.title  =Objetivos de aprendizaje
-outcome.authoring.input  =Busque y seleccione objetivo
+outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
 outcome.authoring.existing  =Objetivos a\u00f1adidos
 outcome.authoring.existing.none  =ninguno
 
