--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 01:03:25 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Jan 16 14:38:11 CST 2019 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -632,6 +632,7 @@ outcome.authoring.title  =Learning outcomes
 outcome.authoring.input  =Search and select by outcome name or code
 outcome.authoring.existing  =Added outcomes
 outcome.authoring.existing.none  =none
+sysadmin.maintain.session.name  =Name
 
 
-#======= End labels: Exported 626 labels for en AU =====
+#======= End labels: Exported 627 labels for en AU =====
