--- a/lams_admin/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 01:03:21 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Jan 16 14:38:08 CST 2019 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -632,6 +632,7 @@ outcome.authoring.title  =Objetivos de aprendizaje
 outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
 outcome.authoring.existing  =Objetivos a\u00f1adidos
 outcome.authoring.existing.none  =ninguno
+sysadmin.maintain.session.name  =Nombre
 
 
-#======= End labels: Exported 626 labels for es ES =====
+#======= End labels: Exported 627 labels for es ES =====
