LDEV-4755 Add configuration for antivirus

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -231,6 +231,7 @@ config.header.ldap.attributes  =LDAP attribute mapping
 config.header.features  =Features
 config.header.look.feel  =Look and feel
 config.header.versions  =Versions
+congfig.header.antivirus =Antivirus
 config.server.url  =Server URL
 config.server.url.context.path  =Server URL context path
 config.version  =Version
@@ -633,6 +634,8 @@ outcome.authoring.input  =Search and select by outcome name or code
 outcome.authoring.existing  =Added outcomes
 outcome.authoring.existing.none  =none
 sysadmin.maintain.session.name  =Name
-
+config.av.enable =Enable antivirus scanning on file upload
+config.av.host =ClamAV server host
+config.av.port =ClamAV server port
 
 #======= End labels: Exported 627 labels for en AU =====
