LDEV-4755 Display upload errors nicer

--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources.properties
@@ -166,6 +166,6 @@ outcome.authoring.title  =Learning outcomes
 outcome.authoring.input  =Search and select by outcome name or code
 outcome.authoring.existing  =Added outcomes
 outcome.authoring.existing.none  =none
-
+error.upload =Error while uploading file: {0}
 
 #======= End labels: Exported 160 labels for en AU =====
