--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -85,6 +85,7 @@ index.dummymonitor  =Dummy Monitor
 title.import.result  =Import tool content result
 title.import  =Import tool content
 title.import.instruction  =Please choose LAMS sequence to import.
+title.import.instruction.antivirus =An antivirus scan will be performed. It can take a while.
 title.export.loading  =Export tool content loading
 label.ld.zip.file  =Learning design import file
 msg.import.success  =Learning design and activities imported successfully.
