--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
@@ -54,9 +54,9 @@ label.authoring.choice.one.multiple.answers  =One or multiple answers?
 label.authoring.choice.one.answer  =One answer only
 label.authoring.choice.multiple.answers  =Multiple answers allowed
 label.authoring.choice.overall.feedback  =Overall feedback
-label.authoring.choice.feedback.on.correct  =For any correct response
-label.authoring.choice.feedback.on.partially.correct  =For any partially correct response
-label.authoring.choice.feedback.on.incorrect  =For any incorrect response
+label.authoring.choice.feedback.on.correct  =Feedback on any correct response
+label.authoring.choice.feedback.on.partially.correct  =Feedback on any partially correct response
+label.authoring.choice.feedback.on.incorrect  =Feedback on any incorrect response
 label.authoring.choice.add.option  =Add another answer
 label.authoring.matching.pairs.add.matching.pairs  =Add question
 label.authoring.matching.pairs.matching.pairs  =Matching pairs
