--- a/lams_tool_lamc/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources.properties
@@ -234,6 +234,8 @@ outcome.authoring.existing  =Added outcomes
 outcome.authoring.existing.none  =none
 warn.tool.output.change.none  =This will delete all existing marks for this activity. Are you sure?
 output.desc.none  =No score
-
+message.qb.modified.update =The question in Question Bank will be updated
+message.qb.modified.version =A new version of the question will be created in Question Bank
+message.qb.modified.new =A new question will be created in Question Bank
 
 #======= End labels: Exported 228 labels for en AU =====
