LDEV-4767 LDEV-4755 adding labels
Adding labels for use login/out logs and anti virus config

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Jan 16 14:38:11 CST 2019 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Feb 06 22:44:30 CST 2019 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -231,7 +231,6 @@ config.header.ldap.attributes  =LDAP attribute mapping
 config.header.features  =Features
 config.header.look.feel  =Look and feel
 config.header.versions  =Versions
-congfig.header.antivirus =Antivirus
 config.server.url  =Server URL
 config.server.url.context.path  =Server URL context path
 config.version  =Version
@@ -634,8 +633,12 @@ outcome.authoring.input  =Search and select by outcome name or code
 outcome.authoring.existing  =Added outcomes
 outcome.authoring.existing.none  =none
 sysadmin.maintain.session.name  =Name
-config.av.enable =Enable antivirus scanning on file upload
-config.av.host =ClamAV server host
-config.av.port =ClamAV server port
+congfig.header.antivirus  =Antivirus
+config.av.enable  =Enable antivirus scanning on files upload
+config.av.host  =ClamAV server host
+config.av.port  =ClamAV server port
+label.type.login  =User login
+label.type.logout  =User logout
 
-#======= End labels: Exported 627 labels for en AU =====
+
+#======= End labels: Exported 633 labels for en AU =====
