LDEV-4587 LDEV-4607 Adding missing labels

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 09:17:35 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Feb 11 20:15:46 CST 2019 
  
 #=================== labels for Assessment =================# 
 
@@ -119,7 +119,7 @@ label.learning.matching.pairs.choose  =Choose
 label.learning.short.answer.answer  =Answer:
 label.learning.true.false.true  =True
 label.learning.true.false.false  =False
-label.learning.ordering.sort.answers  =Sort answers in the right order
+label.learning.ordering.sort.answers  =Sort answers in the right order (click on the answers to drag-and-drop in order).
 label.learning.marks  =Marks for this submission: {0}/{1}.
 label.learning.penalty  =This submission attracted a penalty of {0}.
 label.learning.finish.test  =Finish
@@ -343,6 +343,10 @@ outcome.authoring.title  =Learning outcomes
 outcome.authoring.input  =Search and select by outcome name or code
 outcome.authoring.existing  =Added outcomes
 outcome.authoring.existing.none  =none
+authoring.fla.branch.mapping.ordered.asc  =Start with branches mapped to highest ordered answers
+warn.tool.output.change.none  =This will delete all existing marks for this activity. Are you sure?
+output.desc.none  =No score
+output.ordered.answers.for.question  =Ordered answers for the question:
 
 
-#======= End labels: Exported 337 labels for en AU =====
+#======= End labels: Exported 341 labels for en AU =====
