--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 09:17:35 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Feb 11 20:15:46 CST 2019 
  
 #=================== labels for Assessment =================# 
 
@@ -119,7 +119,7 @@ label.learning.matching.pairs.choose  =Choose
 label.learning.short.answer.answer  =Answer:
 label.learning.true.false.true  =True
 label.learning.true.false.false  =False
-label.learning.ordering.sort.answers  =Sort answers in the right order
+label.learning.ordering.sort.answers  =Sort answers in the right order (click on the answers to drag-and-drop in order).
 label.learning.marks  =Marks for this submission: {0}/{1}.
 label.learning.penalty  =This submission attracted a penalty of {0}.
 label.learning.finish.test  =Finish
@@ -179,7 +179,6 @@ output.desc.learner.total.score  =Last total score
 output.desc.learner.time.taken  =Time taken
 output.desc.learner.number.of.attempts  =Number of attempts
 output.user.score.for.question  =Score for the question:
-output.ordered.answers.for.question  =Ordered answers for the question:
 error.form.validation.error  =You have 1 error in a form. It has been highlighted
 error.form.validation.errors  =You have {0} errors in a form. They have been highlighted
 error.form.validation.hundred.score  =One of the answers should have a grade of 100% so it is possible to get full marks for this question.
@@ -344,6 +343,10 @@ outcome.authoring.title  =Learning outcomes
 outcome.authoring.input  =Search and select by outcome name or code
 outcome.authoring.existing  =Added outcomes
 outcome.authoring.existing.none  =none
+authoring.fla.branch.mapping.ordered.asc  =Start with branches mapped to highest ordered answers
+warn.tool.output.change.none  =This will delete all existing marks for this activity. Are you sure?
+output.desc.none  =No score
+output.ordered.answers.for.question  =Ordered answers for the question:
 
 
-#======= End labels: Exported 337 labels for en AU =====
+#======= End labels: Exported 341 labels for en AU =====
