--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 28 09:17:35 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Feb 11 20:15:43 CST 2019 
  
 #=================== labels for Assessment =================# 
 
@@ -119,7 +119,7 @@ label.learning.matching.pairs.choose  =Elegir
 label.learning.short.answer.answer  =Respuesta:
 label.learning.true.false.true  =VERDADERO
 label.learning.true.false.false  =Falso
-label.learning.ordering.sort.answers  =Ordenar las respuestas en el orden correcto
+label.learning.ordering.sort.answers  =Ordenar las respuestas en el orden correcto (seleccione respuesta y mueva hacia arriba o abajo para ordenar).
 label.learning.marks  =Puntaje: {0}/{1}.
 label.learning.penalty  =Este intento atrajo a una pena de {0}.
 label.learning.finish.test  =Finalizar
@@ -343,6 +343,10 @@ outcome.authoring.title  =Objetivos de aprendizaje
 outcome.authoring.input  =Busque y seleccione objetivo por t\u00edtulo o c\u00f3digo
 outcome.authoring.existing  =Objetivos a\u00f1adidos
 outcome.authoring.existing.none  =ninguno
+authoring.fla.branch.mapping.ordered.asc  =Comenzar con las ramas asignadas a las respuestas ordenadas m\u00e1s altas
+warn.tool.output.change.none  =Est\u00e1 acci\u00f3n borrar\u00e1 todas las notas existentes. \u00bfEst\u00e1 seguro que desea continuar?
+output.desc.none  =Sin notas
+output.ordered.answers.for.question  =Ordenar respuestas para la siguiente pregunta:
 
 
-#======= End labels: Exported 337 labels for es ES =====
+#======= End labels: Exported 341 labels for es ES =====
