--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources.properties
@@ -230,6 +230,8 @@ outcome.authoring.title  =Learning outcomes
 outcome.authoring.input  =Search and select by outcome name or code
 outcome.authoring.existing  =Added outcomes
 outcome.authoring.existing.none  =none
-
+message.qb.modified.update =The question in Question Bank will be updated
+message.qb.modified.version =A new version of the question will be created in Question Bank
+message.qb.modified.new =A new question will be created in Question Bank
 
 #======= End labels: Exported 224 labels for en AU =====
