LDEV-4775 update marks more skillfully after edit in monitor
(cherry picked from commit c5920711a0c7a8b4da40893f4d30d2dc26a0fba1)

--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
@@ -234,6 +234,6 @@ outcome.authoring.existing  =Added outcomes
 outcome.authoring.existing.none  =none
 warn.tool.output.change.none  =This will delete all existing marks for this activity. Are you sure?
 output.desc.none  =No score
-
+label.edit.in.monitor.warning  =Attention: while you edit this activity, students don't have access to it. You must save your changes, so students can re-attempt this activity again.
 
 #======= End labels: Exported 228 labels for en AU =====
