--- a/lams_gradebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources.properties
@@ -122,6 +122,7 @@ outcome.authoring.title  =Learning outcomes
 outcome.authoring.input  =Search and select by outcome name or code
 outcome.authoring.existing  =Added outcomes
 outcome.authoring.existing.none  =none
+outcome.authoring.create.new = [create new]
 outcome.result.not.set  =not set
 outcome.result.error  =Error!
 gradebook.columntitle.attempt  =Attempt #
