--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -476,6 +476,7 @@ outcome.authoring.title  =Learning outcomes
 outcome.authoring.input  =Search and select by outcome name or code
 outcome.authoring.existing  =Added outcomes
 outcome.authoring.existing.none  =none
+outcome.authoring.create.new = [create new]
 
 
 #======= End labels: Exported 470 labels for en AU =====
