--- a/lams_tool_forum/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources.properties
@@ -250,6 +250,7 @@ outcome.authoring.title  =Learning outcomes
 outcome.authoring.input  =Search and select by outcome name or code
 outcome.authoring.existing  =Added outcomes
 outcome.authoring.existing.none  =none
+outcome.authoring.create.new = [create new]
 
 
 #======= End labels: Exported 244 labels for en AU =====
