LDEV-4786 Removing mapping does not remove outcome
Also limit outcome editing to sysadmin only.

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -806,13 +806,15 @@ outcome.manage.add.error  =Error while saving an outcome
 outcome.manage.add.error.name.blank  =Name can not be blank
 outcome.manage.add.error.code.blank  =Code can not be blank
 outcome.manage.add.error.scale.choose  =You have to choose a scale
+outcome.manage.remove.error.in.use =The outcome is mapped to some items. It can not be removed.
 scale.title  =Scales
 scale.manage  =Manage scales
 scale.manage.add  =Add scale
 scale.manage.edit  =Edit scale
 scale.manage.view  =View scale
 scale.manage.remove  =Remove scale
-scale.manage.remove.scale  =Error while removing a scale. It is probably used in some outcomes.
+scale.manage.remove.scale  =Error while removing a scale.
+scale.manage.remove.error.in.use =The scale is used in some outcomes. It can not be removed.
 scale.manage.remove.confirm  =Are you sure you want to remove this scale?
 scale.manage.add.value  =Values
 scale.manage.add.value.info  =Enter comma separated values in increasing order of value. For example, an A,B,C,D scale must be entered as D,C,B,A.
