LDEV-4739 Updating translations

--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Feb 06 22:44:30 CST 2019 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Mar 24 18:04:14 CST 2019 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -639,6 +639,7 @@ config.av.host  =ClamAV server host
 config.av.port  =ClamAV server port
 label.type.login  =User login
 label.type.logout  =User logout
+label.type.config.change  =Configuration change
 
 
-#======= End labels: Exported 633 labels for en AU =====
+#======= End labels: Exported 634 labels for en AU =====
