--- a/lams_admin/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Feb 06 22:44:29 CST 2019 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Mar 24 18:04:11 CST 2019 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -639,6 +639,7 @@ config.av.host  =Nombre o IP del servidor ClamAV
 config.av.port  =Puerto del servidor ClamAV
 label.type.login  =Usuario inicia sesi\u00f3n
 label.type.logout  =Usuario cierra sesi\u00f3n
+label.type.config.change  =Cambio de configuraci\u00f3n
 
 
-#======= End labels: Exported 633 labels for es ES =====
+#======= End labels: Exported 634 labels for es ES =====
