--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Feb 11 20:15:43 CST 2019 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Mar 24 18:04:59 CST 2019 
  
 #=================== labels for Assessment =================# 
 
@@ -347,6 +347,7 @@ authoring.fla.branch.mapping.ordered.asc  =Comenzar con las ramas asignadas a la
 warn.tool.output.change.none  =Est\u00e1 acci\u00f3n borrar\u00e1 todas las notas existentes. \u00bfEst\u00e1 seguro que desea continuar?
 output.desc.none  =Sin notas
 output.ordered.answers.for.question  =Ordenar respuestas para la siguiente pregunta:
+label.answer.required  =Se require respuesta
 
 
-#======= End labels: Exported 341 labels for es ES =====
+#======= End labels: Exported 342 labels for es ES =====
