--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Feb 11 20:15:46 CST 2019 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Mar 24 18:04:58 CST 2019 
  
 #=================== labels for Assessment =================# 
 
@@ -343,11 +343,11 @@ outcome.authoring.title  =Learning outcomes
 outcome.authoring.input  =Search and select by outcome name or code
 outcome.authoring.existing  =Added outcomes
 outcome.authoring.existing.none  =none
-outcome.authoring.create.new = [create new]
 authoring.fla.branch.mapping.ordered.asc  =Start with branches mapped to highest ordered answers
 warn.tool.output.change.none  =This will delete all existing marks for this activity. Are you sure?
 output.desc.none  =No score
 output.ordered.answers.for.question  =Ordered answers for the question:
+label.answer.required  =Answer required
 
 
-#======= End labels: Exported 341 labels for en AU =====
+#======= End labels: Exported 342 labels for en AU =====
