--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Feb 10 01:31:19 CST 2019 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Mar 24 18:04:58 CST 2019 
  
 #=================== labels for Assessment =================# 
 
@@ -343,6 +343,11 @@ outcome.authoring.title  =\u039c\u03b1\u03b8\u03b7\u03c3\u03b9\u03b1\u03ba\u03ac
 outcome.authoring.input  =\u0391\u03bd\u03b1\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7 \u03ba\u03b1\u03b9 \u03b5\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae \u03ba\u03b1\u03c4\u03ac \u03cc\u03bd\u03bf\u03bc\u03b1 \u03ae \u03ba\u03c9\u03b4\u03b9\u03ba\u03cc \u03bc\u03b1\u03b8\u03b7\u03c3\u03b9\u03b1\u03ba\u03bf\u03cd \u03b1\u03c0\u03bf\u03c4\u03b5\u03bb\u03ad\u03c3\u03bc\u03b1\u03c4\u03bf\u03c2
 outcome.authoring.existing  =\u03a0\u03c1\u03bf\u03c3\u03c4\u03ad\u03b8\u03b7\u03ba\u03b1\u03bd \u03bc\u03b1\u03b8\u03b7\u03c3\u03b9\u03b1\u03ba\u03ac \u03b1\u03c0\u03bf\u03c4\u03b5\u03bb\u03ad\u03c3\u03bc\u03b1\u03c4\u03b1
 outcome.authoring.existing.none  =\u03ba\u03b1\u03bd\u03ad\u03bd\u03b1
+authoring.fla.branch.mapping.ordered.asc  =\u039e\u03b5\u03ba\u03b9\u03bd\u03ae\u03c3\u03c4\u03b5 \u03bc\u03b5 \u03c4\u03bf\u03c5\u03c2 \u03ba\u03bb\u03ac\u03b4\u03bf\u03c5\u03c2 \u03c0\u03bf\u03c5 \u03b1\u03bd\u03c4\u03b9\u03c3\u03c4\u03bf\u03b9\u03c7\u03af\u03b6\u03bf\u03bd\u03c4\u03b1\u03b9 \u03c3\u03c4\u03b9\u03c2 \u03c5\u03c8\u03b7\u03bb\u03cc\u03c4\u03b5\u03c1\u03b5\u03c2 \u03b4\u03b9\u03b1\u03c4\u03b5\u03c4\u03b1\u03b3\u03bc\u03ad\u03bd\u03b5\u03c2 \u03b1\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2
+warn.tool.output.change.none  =\u039c\u03b5 \u03b1\u03c5\u03c4\u03cc\u03bd \u03c4\u03bf\u03bd \u03c4\u03c1\u03cc\u03c0\u03bf \u03b8\u03b1 \u03b4\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03bf\u03cd\u03bd \u03cc\u03bb\u03bf\u03b9 \u03c4\u03b1 \u03c5\u03c0\u03ac\u03c1\u03c7\u03bf\u03bd\u03c4\u03b5\u03c2 \u03b2\u03b1\u03b8\u03bc\u03bf\u03af \u03b3\u03b9\u03b1 \u03b1\u03c5\u03c4\u03ae\u03bd \u03c4\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1. \u0395\u03af\u03c3\u03b1\u03b9 \u03c3\u03af\u03b3\u03bf\u03c5\u03c1\u03bf\u03c2?
+output.desc.none  =\u0394\u03b5\u03bd \u03c5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1
+output.ordered.answers.for.question  =\u0391\u03c0\u03b1\u03c1\u03b1\u03af\u03c4\u03b7\u03c4\u03b5\u03c2 \u03b1\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2 \u03b3\u03b9\u03b1 \u03c4\u03b7\u03bd \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7:
+label.answer.required  =\u0391\u03c0\u03b1\u03b9\u03c4\u03b5\u03af\u03c4\u03b1\u03b9 \u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7
 
 
-#======= End labels: Exported 337 labels for el GR =====
+#======= End labels: Exported 342 labels for el GR =====
