--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -343,6 +343,7 @@ outcome.authoring.title  =Learning outcomes
 outcome.authoring.input  =Search and select by outcome name or code
 outcome.authoring.existing  =Added outcomes
 outcome.authoring.existing.none  =none
+outcome.authoring.remove.confirm  =Are you sure you want to remove this learning outcome?
 authoring.fla.branch.mapping.ordered.asc  =Start with branches mapped to highest ordered answers
 warn.tool.output.change.none  =This will delete all existing marks for this activity. Are you sure?
 output.desc.none  =No score
