--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -632,6 +632,7 @@ outcome.authoring.title  =Learning outcomes
 outcome.authoring.input  =Search and select by outcome name or code
 outcome.authoring.existing  =Added outcomes
 outcome.authoring.existing.none  =none
+outcome.authoring.remove.confirm  =Are you sure you want to remove this learning outcome?
 sysadmin.maintain.session.name  =Name
 congfig.header.antivirus  =Antivirus
 config.av.enable  =Enable antivirus scanning on files upload
