--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
@@ -166,6 +166,7 @@ outcome.authoring.title  =Learning outcomes
 outcome.authoring.input  =Search and select by outcome name or code
 outcome.authoring.existing  =Added outcomes
 outcome.authoring.existing.none  =none
+outcome.authoring.remove.confirm  =Are you sure you want to remove this learning outcome?
 error.upload  =Error while uploading file: {0}
 
 
