LDEV-4769 Updating labels
English and Español

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Mar 24 18:04:59 CST 2019 
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Apr 05 03:05:54 CST 2019 
  
 #=================== labels for Assessment =================# 
 
@@ -117,7 +117,7 @@ label.learning.choose.at.least.one.answer  =Elija por lo menos una respuesta.
 label.learning.matching.pairs.pick.up  =Elija las respuestas correspondientes
 label.learning.matching.pairs.choose  =Elegir
 label.learning.short.answer.answer  =Respuesta:
-label.learning.true.false.true  =VERDADERO
+label.learning.true.false.true  =Verdadero
 label.learning.true.false.false  =Falso
 label.learning.ordering.sort.answers  =Ordenar las respuestas en el orden correcto (seleccione respuesta y mueva hacia arriba o abajo para ordenar).
 label.learning.marks  =Puntaje: {0}/{1}.
@@ -348,6 +348,7 @@ warn.tool.output.change.none  =Est\u00e1 acci\u00f3n borrar\u00e1 todas las nota
 output.desc.none  =Sin notas
 output.ordered.answers.for.question  =Ordenar respuestas para la siguiente pregunta:
 label.answer.required  =Se require respuesta
+outcome.authoring.remove.confirm  =\u00bfEst\u00e1 seguro que desea eliminar?
 
 
-#======= End labels: Exported 342 labels for es ES =====
+#======= End labels: Exported 343 labels for es ES =====
